# dcgan-rs

./: Cargo.toml  README.md  build.sh  setenv.bat  setenv.sh
assets/: PyTorch_LICENSE.txt  anyhow_LICENSE-APACHE.txt  tch-rs_LICENSE-MIT.txt
src/: discriminator.rs  generator.rs  main.rs
