[package]
name = "dcgan-rs"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.81"
clap = { version = "4.5.4", features = ["derive"] }
gif = "0.13.1"
rand = "0.8.5"
tch = "0.15.0"
tqdm = "0.7.0"
#torch-sys = {version="0.15.0", features=["download-libtorch"]}
